Changed Mod Version to 0.4.6 Adjusted to 1.20.4 version (getFirst() is not a function here)